--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>405</width>
     <height>500</height>
    </rect>
   </property>
@@ -18,8 +18,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>400</width>
-    <height>500</height>
+    <width>420</width>
+    <height>520</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -34,8 +34,8 @@
    </property>
    <property name="maximumSize">
     <size>
-     <width>16777215</width>
-     <height>800</height>
+     <width>406</width>
+     <height>500</height>
     </size>
    </property>
    <widget class="QWidget" name="gridLayoutWidget">
@@ -44,22 +44,55 @@
       <x>0</x>
       <y>0</y>
       <width>502</width>
-      <height>532</height>
+      <height>542</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
+     <property name="leftMargin">
+      <number>0</number>
+     </property>
      <property name="rightMargin">
-      <number>5</number>
+      <number>0</number>
      </property>
      <property name="bottomMargin">
-      <number>5</number>
+      <number>0</number>
+     </property>
+     <property name="spacing">
+      <number>0</number>
      </property>
      <item row="0" column="0">
       <widget class="QTabWidget" name="tabWidget">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>505</width>
+         <height>600</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <family>Sarasa Gothic SC</family>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
+       <property name="tabPosition">
+        <enum>QTabWidget::North</enum>
+       </property>
+       <property name="tabShape">
+        <enum>QTabWidget::Rounded</enum>
+       </property>
        <property name="currentIndex">
-        <number>0</number>
+        <number>1</number>
+       </property>
+       <property name="tabBarAutoHide">
+        <bool>false</bool>
        </property>
        <widget class="QWidget" name="TabMain">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="minimumSize">
          <size>
           <width>400</width>
@@ -81,18 +114,67 @@
            <x>10</x>
            <y>10</y>
            <width>381</width>
-           <height>251</height>
+           <height>181</height>
           </rect>
+         </property>
+         <property name="placeholderText">
+          <string>debug</string>
+         </property>
+        </widget>
+        <widget class="QTableView" name="userdata">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>200</y>
+           <width>381</width>
+           <height>111</height>
+          </rect>
+         </property>
+        </widget>
+       </widget>
+       <widget class="QWidget" name="TabDemo">
+        <property name="maximumSize">
+         <size>
+          <width>400</width>
+          <height>500</height>
+         </size>
+        </property>
+        <attribute name="title">
+         <string>Demo</string>
+        </attribute>
+        <widget class="QCheckBox" name="autoDownload">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>370</y>
+           <width>180</width>
+           <height>40</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Sarasa Gothic SC</family>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>自动开始下载</string>
          </property>
         </widget>
         <widget class="QTextEdit" name="dragArea">
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>400</y>
-           <width>381</width>
-           <height>71</height>
+           <y>40</y>
+           <width>380</width>
+           <height>140</height>
           </rect>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
          </property>
          <property name="font">
           <font>
@@ -113,21 +195,149 @@
           <number>0</number>
          </property>
          <property name="placeholderText">
-          <string>         拖拽区域</string>
+          <string/>
          </property>
         </widget>
-        <widget class="QTableView" name="userdata">
+        <widget class="QTextEdit" name="dispURL">
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>270</y>
-           <width>381</width>
-           <height>121</height>
+           <y>219</y>
+           <width>380</width>
+           <height>141</height>
           </rect>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="clipURL">
+         <property name="geometry">
+          <rect>
+           <x>200</x>
+           <y>420</y>
+           <width>191</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Sarasa Gothic SC</family>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>复制链接</string>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="downURL">
+         <property name="geometry">
+          <rect>
+           <x>200</x>
+           <y>370</y>
+           <width>190</width>
+           <height>40</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Sarasa Gothic SC</family>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>开始下载</string>
+         </property>
+        </widget>
+        <widget class="QCheckBox" name="autoClip">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>420</y>
+           <width>180</width>
+           <height>40</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Sarasa Gothic SC</family>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>自动复制到剪贴板</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="lableDispURL">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>180</y>
+           <width>140</width>
+           <height>40</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Sarasa Gothic SC</family>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>生成的链接：</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="lableDispURL_2">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>10</y>
+           <width>290</width>
+           <height>25</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Sarasa Gothic SC</family>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>注意打开Steam并关闭CSGO！</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="labelDragArea">
+         <property name="geometry">
+          <rect>
+           <x>70</x>
+           <y>79</y>
+           <width>260</width>
+           <height>60</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Sarasa Gothic SC</family>
+           <pointsize>40</pointsize>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: gray;</string>
+         </property>
+         <property name="text">
+          <string>拖拽区域</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </widget>
        <widget class="QWidget" name="TabInfo">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="minimumSize">
          <size>
           <width>400</width>
@@ -143,6 +353,28 @@
         <attribute name="title">
          <string>关于</string>
         </attribute>
+        <widget class="QTextEdit" name="textEdit">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>10</y>
+           <width>381</width>
+           <height>451</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>20</pointsize>
+          </font>
+         </property>
+         <property name="html">
+          <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sarasa Gothic SC'; font-size:20pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+        </widget>
        </widget>
       </widget>
      </item>
