--- a/dll.qrc
+++ b/dll.qrc
@@ -6,5 +6,6 @@
         <file>dll/steam_api.dll</file>
         <file>dll/steam_appid.txt</file>
         <file>dll/quazipd.dll</file>
+        <file>dll/quazip.dll</file>
     </qresource>
 </RCC>
