--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -69,7 +69,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>2</number>
     </property>
     <property name="tabBarAutoHide">
      <bool>false</bool>
@@ -100,7 +100,7 @@
       <property name="geometry">
        <rect>
         <x>7</x>
-        <y>170</y>
+        <y>130</y>
         <width>380</width>
         <height>100</height>
        </rect>
@@ -121,9 +121,9 @@
       <property name="geometry">
        <rect>
         <x>7</x>
-        <y>280</y>
+        <y>240</y>
         <width>380</width>
-        <height>140</height>
+        <height>181</height>
        </rect>
       </property>
       <property name="font">
@@ -169,20 +169,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>打开csgo/cfg位置</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="backupSetting">
-      <property name="geometry">
-       <rect>
-        <x>7</x>
-        <y>130</y>
-        <width>120</width>
-        <height>30</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>备份设置</string>
+       <string>CSGO/CFG文件夹</string>
       </property>
      </widget>
      <widget class="QPushButton" name="openlocalcfg">
@@ -195,20 +182,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>打开local/cfg位置</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="restoreSetting">
-      <property name="geometry">
-       <rect>
-        <x>137</x>
-        <y>130</y>
-        <width>120</width>
-        <height>30</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>恢复设置</string>
+       <string>个人CFG文件夹</string>
       </property>
      </widget>
      <widget class="QPushButton" name="manualBtn">
@@ -222,19 +196,6 @@
       </property>
       <property name="text">
        <string>手动选择路径</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="transferSetting">
-      <property name="geometry">
-       <rect>
-        <x>267</x>
-        <y>130</y>
-        <width>120</width>
-        <height>30</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>转移设置</string>
       </property>
      </widget>
      <widget class="QPushButton" name="antiHarmony">
@@ -264,6 +225,9 @@
       </property>
      </widget>
      <widget class="QPushButton" name="solveVAC">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="geometry">
        <rect>
         <x>267</x>
@@ -286,7 +250,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>打开国服local/cfg</string>
+       <string>国服个人CFG文件夹</string>
       </property>
      </widget>
      <widget class="QPushButton" name="ManualSteamID">
@@ -367,11 +331,8 @@
      <zorder>debug</zorder>
      <zorder>userdata</zorder>
      <zorder>opencsgocfg</zorder>
-     <zorder>backupSetting</zorder>
      <zorder>openlocalcfg</zorder>
-     <zorder>restoreSetting</zorder>
      <zorder>manualBtn</zorder>
-     <zorder>transferSetting</zorder>
      <zorder>antiHarmony</zorder>
      <zorder>solveVAC</zorder>
      <zorder>openCNlocalcfg</zorder>
@@ -381,6 +342,69 @@
      <zorder>textID</zorder>
      <zorder>labelManualSteamID</zorder>
      <zorder>getLauncherPathBtn</zorder>
+    </widget>
+    <widget class="QWidget" name="TabSetting">
+     <attribute name="title">
+      <string>备份</string>
+     </attribute>
+     <widget class="QTableWidget" name="backupdata">
+      <property name="geometry">
+       <rect>
+        <x>7</x>
+        <y>61</y>
+        <width>380</width>
+        <height>401</height>
+       </rect>
+      </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+     </widget>
+     <widget class="QPushButton" name="backupSetting">
+      <property name="geometry">
+       <rect>
+        <x>7</x>
+        <y>10</y>
+        <width>120</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>备份设置</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="refreshBackup">
+      <property name="geometry">
+       <rect>
+        <x>137</x>
+        <y>10</y>
+        <width>120</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>刷新</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="openBackupLoc">
+      <property name="geometry">
+       <rect>
+        <x>267</x>
+        <y>10</y>
+        <width>120</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>打开备份位置</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="TabDemo">
      <property name="maximumSize">
@@ -544,7 +568,7 @@
        <rect>
         <x>7</x>
         <y>10</y>
-        <width>290</width>
+        <width>181</width>
         <height>25</height>
        </rect>
       </property>
@@ -555,13 +579,13 @@
        </font>
       </property>
       <property name="text">
-       <string>注意打开Steam并关闭CSGO！</string>
+       <string>DEMO分享链接转换：</string>
       </property>
      </widget>
      <widget class="QLabel" name="labelDragArea">
       <property name="geometry">
        <rect>
-        <x>70</x>
+        <x>67</x>
         <y>79</y>
         <width>260</width>
         <height>60</height>
@@ -577,7 +601,7 @@
        <string notr="true">color: gray;</string>
       </property>
       <property name="text">
-       <string>拖拽区域</string>
+       <string>拖拽/粘贴</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
