--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -25,9 +25,7 @@
   <property name="font">
    <font>
     <family>微软雅黑</family>
-    <pointsize>12</pointsize>
-    <weight>50</weight>
-    <bold>false</bold>
+    <pointsize>10</pointsize>
    </font>
   </property>
   <property name="windowTitle">
@@ -49,7 +47,7 @@
    <property name="font">
     <font>
      <family>微软雅黑</family>
-     <pointsize>12</pointsize>
+     <pointsize>10</pointsize>
      <weight>50</weight>
      <bold>false</bold>
     </font>
@@ -93,7 +91,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>3</number>
     </property>
     <property name="tabBarAutoHide">
      <bool>false</bool>
@@ -176,8 +174,8 @@
        <rect>
         <x>150</x>
         <y>80</y>
-        <width>131</width>
-        <height>41</height>
+        <width>130</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="font">
@@ -197,8 +195,8 @@
        <rect>
         <x>150</x>
         <y>30</y>
-        <width>131</width>
-        <height>41</height>
+        <width>130</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="font">
@@ -218,8 +216,8 @@
        <rect>
         <x>10</x>
         <y>30</y>
-        <width>131</width>
-        <height>41</height>
+        <width>130</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="font">
@@ -239,8 +237,8 @@
        <rect>
         <x>290</x>
         <y>30</y>
-        <width>131</width>
-        <height>41</height>
+        <width>130</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="font">
@@ -378,16 +376,16 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>20</x>
         <y>5</y>
-        <width>101</width>
+        <width>100</width>
         <height>20</height>
        </rect>
       </property>
       <property name="font">
        <font>
         <family>微软雅黑</family>
-        <pointsize>12</pointsize>
+        <pointsize>10</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -414,7 +412,7 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>226</x>
+        <x>230</x>
         <y>5</y>
         <width>90</width>
         <height>20</height>
@@ -423,7 +421,7 @@
       <property name="font">
        <font>
         <family>微软雅黑</family>
-        <pointsize>12</pointsize>
+        <pointsize>10</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -444,16 +442,16 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>120</x>
+        <x>130</x>
         <y>5</y>
-        <width>101</width>
+        <width>100</width>
         <height>20</height>
        </rect>
       </property>
       <property name="font">
        <font>
         <family>微软雅黑</family>
-        <pointsize>12</pointsize>
+        <pointsize>10</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -489,8 +487,8 @@
      <widget class="QLabel" name="checkSteamID">
       <property name="geometry">
        <rect>
-        <x>320</x>
-        <y>6</y>
+        <x>319</x>
+        <y>4</y>
         <width>100</width>
         <height>20</height>
        </rect>
@@ -515,8 +513,8 @@
        <rect>
         <x>290</x>
         <y>80</y>
-        <width>131</width>
-        <height>41</height>
+        <width>130</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="font">
@@ -560,8 +558,8 @@
        <rect>
         <x>290</x>
         <y>60</y>
-        <width>131</width>
-        <height>41</height>
+        <width>130</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="font">
@@ -581,8 +579,8 @@
        <rect>
         <x>290</x>
         <y>160</y>
-        <width>131</width>
-        <height>41</height>
+        <width>130</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="font">
@@ -602,8 +600,8 @@
        <rect>
         <x>290</x>
         <y>110</y>
-        <width>131</width>
-        <height>41</height>
+        <width>130</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="font">
@@ -626,17 +624,20 @@
        <rect>
         <x>10</x>
         <y>210</y>
-        <width>411</width>
-        <height>351</height>
+        <width>410</width>
+        <height>350</height>
        </rect>
       </property>
       <property name="font">
        <font>
         <family>微软雅黑</family>
-        <pointsize>13</pointsize>
+        <pointsize>12</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
+      </property>
+      <property name="plainText">
+       <string/>
       </property>
       <property name="placeholderText">
        <string>debug</string>
@@ -647,7 +648,7 @@
        <rect>
         <x>290</x>
         <y>10</y>
-        <width>131</width>
+        <width>130</width>
         <height>40</height>
        </rect>
       </property>
@@ -668,8 +669,8 @@
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>271</width>
-        <height>41</height>
+        <width>270</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="font">
@@ -710,8 +711,8 @@ p, li { white-space: pre-wrap; }
        <rect>
         <x>20</x>
         <y>470</y>
-        <width>191</width>
-        <height>41</height>
+        <width>190</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="font">
@@ -735,7 +736,7 @@ p, li { white-space: pre-wrap; }
         <x>10</x>
         <y>40</y>
         <width>410</width>
-        <height>170</height>
+        <height>190</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -747,14 +748,13 @@ p, li { white-space: pre-wrap; }
       <property name="font">
        <font>
         <family>微软雅黑</family>
-        <pointsize>13</pointsize>
+        <pointsize>12</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">border:2px solid Gainsboro;
-border-radius:1px;</string>
+       <string notr="true"/>
       </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -779,15 +779,15 @@ border-radius:1px;</string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>310</y>
+        <y>269</y>
         <width>410</width>
-        <height>150</height>
+        <height>190</height>
        </rect>
       </property>
       <property name="font">
        <font>
         <family>微软雅黑</family>
-        <pointsize>13</pointsize>
+        <pointsize>12</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -840,8 +840,8 @@ border-radius:1px;</string>
        <rect>
         <x>20</x>
         <y>520</y>
-        <width>191</width>
-        <height>41</height>
+        <width>190</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="font">
@@ -863,8 +863,8 @@ border-radius:1px;</string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>279</y>
-        <width>140</width>
+        <y>240</y>
+        <width>410</width>
         <height>30</height>
        </rect>
       </property>
@@ -885,7 +885,7 @@ border-radius:1px;</string>
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>180</width>
+        <width>410</width>
         <height>30</height>
        </rect>
       </property>
@@ -898,16 +898,16 @@ border-radius:1px;</string>
        </font>
       </property>
       <property name="text">
-       <string>DEMO分享链接转换：</string>
+       <string>DEMO分享链接转换：（拖拽或粘贴到此处，等待10s）</string>
       </property>
      </widget>
      <widget class="QLabel" name="labelDragArea">
       <property name="geometry">
        <rect>
-        <x>85</x>
-        <y>90</y>
-        <width>260</width>
-        <height>60</height>
+        <x>10</x>
+        <y>40</y>
+        <width>410</width>
+        <height>190</height>
        </rect>
       </property>
       <property name="font">
@@ -928,65 +928,10 @@ border-radius:1px;</string>
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
-     <widget class="QTextEdit" name="labelHint">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>220</y>
-        <width>410</width>
-        <height>50</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>微软雅黑</family>
-        <pointsize>12</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color:Gainsboro;
-border-radius:10px;</string>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::NoFrame</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Sunken</enum>
-      </property>
-      <property name="verticalScrollBarPolicy">
-       <enum>Qt::ScrollBarAlwaysOff</enum>
-      </property>
-      <property name="horizontalScrollBarPolicy">
-       <enum>Qt::ScrollBarAlwaysOff</enum>
-      </property>
-      <property name="readOnly">
-       <bool>true</bool>
-      </property>
-      <property name="html">
-       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'微软雅黑'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:13pt;&quot;&gt;！提示：把DEMO分享链接拖拽或粘贴到此处，等待10s左右生成可直接下载的链接，推荐用IDM下载。&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
-     <widget class="Line" name="line">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>272</y>
-        <width>410</width>
-        <height>15</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
     </widget>
     <widget class="QWidget" name="TabInfo">
      <property name="enabled">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <property name="minimumSize">
       <size>
@@ -998,6 +943,9 @@ p, li { white-space: pre-wrap; }
       <string>关于</string>
      </attribute>
      <widget class="QTextEdit" name="textEdit">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -1008,8 +956,8 @@ p, li { white-space: pre-wrap; }
       </property>
       <property name="font">
        <font>
-        <family>更纱黑体 SC</family>
-        <pointsize>20</pointsize>
+        <family>微软雅黑</family>
+        <pointsize>18</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
@@ -1018,12 +966,30 @@ p, li { white-space: pre-wrap; }
        <string notr="true">background-color:Gainsboro;
 border-radius:10px;</string>
       </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
       <property name="html">
        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'更纱黑体 SC'; font-size:20pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sarasa Gothic SC';&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'微软雅黑'; font-size:18pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'更纱黑体 SC';&quot;&gt;CSGO工具箱V1.0.2&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;-----------------&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'更纱黑体 SC';&quot;&gt;@Purp1e&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'更纱黑体 SC';&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Sarasa Gothic SC';&quot;&gt;鸣谢&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Sarasa Gothic SC';&quot;&gt;Tugend&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Sarasa Gothic SC';&quot;&gt;隐藏在拖更的黄鱼&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;-----------------&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Sarasa Gothic SC';&quot;&gt;Github地址&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a href=&quot;https://github.com/Purple-CSGO/CSGO-Toolbox&quot;&gt;&lt;span style=&quot; font-family:'更纱黑体 SC'; text-decoration: underline; color:#0000ff;&quot;&gt;https://github.com/Purple-CSGO/CSGO-Toolbox&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;-----------------&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Sarasa Gothic SC';&quot;&gt;更新地址&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a href=&quot;https://github.com/Purple-CSGO/CSGO-Toolbox/releases&quot;&gt;&lt;span style=&quot; font-family:'更纱黑体 SC'; text-decoration: underline; color:#0000ff;&quot;&gt;https://github.com/Purple-CSGO/CSGO-Toolbox/releases&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </widget>
