--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -91,7 +91,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>3</number>
     </property>
     <property name="tabBarAutoHide">
      <bool>false</bool>
@@ -556,9 +556,9 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>290</x>
         <y>60</y>
-        <width>171</width>
+        <width>130</width>
         <height>40</height>
        </rect>
       </property>
@@ -571,7 +571,7 @@
        </font>
       </property>
       <property name="text">
-       <string>解决VAC验证(测试)</string>
+       <string>解决VAC验证</string>
       </property>
      </widget>
      <widget class="QPushButton" name="reloadHarmony">
@@ -705,8 +705,8 @@ p, li { white-space: pre-wrap; }
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>110</y>
-        <width>171</width>
+        <y>60</y>
+        <width>170</width>
         <height>40</height>
        </rect>
       </property>
@@ -998,7 +998,7 @@ border-radius:10px;</string>
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'微软雅黑'; font-size:18pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'更纱黑体 SC';&quot;&gt;CSGO工具箱V1.0.2a&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'更纱黑体 SC';&quot;&gt;CSGO工具箱V1.0.2c&lt;/span&gt;&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;-----------------&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'更纱黑体 SC';&quot;&gt;@Purp1e&lt;/span&gt;&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'更纱黑体 SC';&quot;&gt;&lt;br /&gt;&lt;/p&gt;
