--- a/src.qrc
+++ b/src.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/file">
         <file>img/Loading.png</file>
         <file>logo.ico</file>
+        <file>logo.png</file>
     </qresource>
 </RCC>
